--- a/CombineDataset.ipynb
+++ b/CombineDataset.ipynb
@@ -2,20 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-04T14:25:42.731291Z",
-     "start_time": "2025-06-04T14:25:42.726662Z"
-    },
-    "collapsed": true
+     "end_time": "2025-06-10T18:09:13.330875Z",
+     "start_time": "2025-06-10T18:09:12.987232Z"
+    }
    },
+   "source": "import pandas as pd",
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -294,9 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "id": "07ae3a57",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T18:10:39.040397Z",
+     "start_time": "2025-06-10T18:10:38.107525Z"
+    }
+   },
+   "source": [
+    "tweet_dataset = pd.read_csv('Datasets/TSA.csv')\n",
+    "tweet_dataset.columns"
+   ],
    "outputs": [
     {
      "data": {
@@ -304,21 +309,25 @@
        "Index(['Text', 'Label'], dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "tweet_dataset = pd.read_csv('Datasets/TSA.csv')\n",
-    "tweet_dataset.columns"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "c6acc621",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T18:10:41.173851Z",
+     "start_time": "2025-06-10T18:10:41.152181Z"
+    }
+   },
+   "source": [
+    "print(tweet_dataset['Label'].unique())"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -328,24 +337,17 @@
      ]
     }
    ],
-   "source": [
-    "print(tweet_dataset['Label'].unique())"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
    "id": "03653c87",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 2]\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T18:10:43.081577Z",
+     "start_time": "2025-06-10T18:10:43.054021Z"
     }
-   ],
+   },
    "source": [
     "label_mapping = {\n",
     "    'positive': 1,\n",
@@ -355,13 +357,32 @@
     "\n",
     "tweet_dataset['Label'] = tweet_dataset['Label'].map(label_mapping)\n",
     "print(tweet_dataset['Label'].unique())"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 2]\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
    "id": "30562db3",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T18:10:46.995367Z",
+     "start_time": "2025-06-10T18:10:46.980750Z"
+    }
+   },
+   "source": [
+    "# Rename columns to match the format of twitter_dataset\n",
+    "tweet_dataset = tweet_dataset.rename(columns={'Label': 'label', 'Text': 'text'})\n",
+    "print(tweet_dataset.columns)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -371,17 +392,20 @@
      ]
     }
    ],
-   "source": [
-    "# Rename columns to match the format of twitter_dataset\n",
-    "tweet_dataset = tweet_dataset.rename(columns={'Label': 'label', 'Text': 'text'})\n",
-    "print(tweet_dataset.columns)"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
    "id": "3887ce0f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T18:10:48.782935Z",
+     "start_time": "2025-06-10T18:10:48.762212Z"
+    }
+   },
+   "source": [
+    "tweet_dataset.isnull().sum()"
+   ],
    "outputs": [
     {
      "data": {
@@ -391,20 +415,26 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "tweet_dataset.isnull().sum()"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
    "id": "9cdc3c82",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T18:10:52.414697Z",
+     "start_time": "2025-06-10T18:10:52.381224Z"
+    }
+   },
+   "source": [
+    "tweet_dataset.dropna(inplace=True)\n",
+    "print(tweet_dataset.shape)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -414,16 +444,24 @@
      ]
     }
    ],
-   "source": [
-    "tweet_dataset.dropna(inplace=True)\n",
-    "print(tweet_dataset.shape)"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
    "id": "5a4912e5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T18:11:54.730743Z",
+     "start_time": "2025-06-10T18:11:53.687455Z"
+    }
+   },
+   "source": [
+    "# Save the processed tweet dataset\n",
+    "tweet_dataset.to_csv('Datasets/processed_english_dataset.csv', index=False)\n",
+    "\n",
+    "# Display the shape of the final dataset\n",
+    "print(\"Final tweet dataset shape:\", tweet_dataset.shape)\n"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -433,13 +471,7 @@
      ]
     }
    ],
-   "source": [
-    "# Save the processed tweet dataset\n",
-    "tweet_dataset.to_csv('Datasets/processed_tweet_dataset.csv', index=False)\n",
-    "\n",
-    "# Display the shape of the final dataset\n",
-    "print(\"Final tweet dataset shape:\", tweet_dataset.shape)\n"
-   ]
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
