Sampled EDA and Training for quick Feedback Loop

--- a/EnglistTest.ipynb
+++ b/EnglistTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_model_name = \"distilbert-base-multilingual-cased\"\n",
-    "lora_model_path = \"./distilbert-ft\""
+    "base_model_name = \"distilbert-base-uncased\"\n",
+    "lora_model_path = \"./English_DistilBERT_Model\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-multilingual-cased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "    (model): DistilBertForSequenceClassification(\n",
        "      (distilbert): DistilBertModel(\n",
        "        (embeddings): Embeddings(\n",
-       "          (word_embeddings): Embedding(119547, 768, padding_idx=0)\n",
+       "          (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
        "          (position_embeddings): Embedding(512, 768)\n",
        "          (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
        "          (dropout): Dropout(p=0.1, inplace=False)\n",
@@ -82,13 +82,13 @@
        "                (q_lin): lora.Linear(\n",
        "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
        "                  (lora_dropout): ModuleDict(\n",
-       "                    (default): Dropout(p=0.1, inplace=False)\n",
+       "                    (default): Dropout(p=0.05, inplace=False)\n",
        "                  )\n",
        "                  (lora_A): ModuleDict(\n",
-       "                    (default): Linear(in_features=768, out_features=8, bias=False)\n",
+       "                    (default): Linear(in_features=768, out_features=16, bias=False)\n",
        "                  )\n",
        "                  (lora_B): ModuleDict(\n",
-       "                    (default): Linear(in_features=8, out_features=768, bias=False)\n",
+       "                    (default): Linear(in_features=16, out_features=768, bias=False)\n",
        "                  )\n",
        "                  (lora_embedding_A): ParameterDict()\n",
        "                  (lora_embedding_B): ParameterDict()\n",
@@ -98,13 +98,13 @@
        "                (v_lin): lora.Linear(\n",
        "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
        "                  (lora_dropout): ModuleDict(\n",
-       "                    (default): Dropout(p=0.1, inplace=False)\n",
+       "                    (default): Dropout(p=0.05, inplace=False)\n",
        "                  )\n",
        "                  (lora_A): ModuleDict(\n",
-       "                    (default): Linear(in_features=768, out_features=8, bias=False)\n",
+       "                    (default): Linear(in_features=768, out_features=16, bias=False)\n",
        "                  )\n",
        "                  (lora_B): ModuleDict(\n",
-       "                    (default): Linear(in_features=8, out_features=768, bias=False)\n",
+       "                    (default): Linear(in_features=16, out_features=768, bias=False)\n",
        "                  )\n",
        "                  (lora_embedding_A): ParameterDict()\n",
        "                  (lora_embedding_B): ParameterDict()\n",
@@ -142,7 +142,7 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -194,15 +194,15 @@
      "output_type": "stream",
      "text": [
       "> \"I absolutely loved this product!\" → Positive\n",
-      "> \"I'm not happy with the service.\" → Positive\n",
-      "> \"It's okay, nothing special.\" → Neutral\n",
+      "> \"I'm not happy with the service.\" → Negative\n",
+      "> \"It's okay, nothing special.\" → Positive\n",
       "> \"Je suis très déçu du produit.\" → Negative\n",
-      "> \"बहुत ही खराब अनुभव था।\" → Positive\n",
-      "> \":(\" → Positive\n",
-      "> \":)\" → Positive\n",
-      "> \"Este produto é incrível!\" → Positive\n",
+      "> \"बहुत ही खराब अनुभव था।\" → Negative\n",
+      "> \":(\" → Negative\n",
+      "> \":)\" → Negative\n",
+      "> \"Este produto é incrível!\" → Negative\n",
       "> \"This product is amazing!\" → Positive\n",
-      "> \"Este produto é muito bom!\" → Positive\n",
+      "> \"Este produto é muito bom!\" → Negative\n",
       "> \"Este produto é muito ruim!\" → Negative\n"
      ]
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -240,34 +240,34 @@
       "> \"I am incredibly happy and satisfied.\" → Positive\n",
       "> \"This is a total disaster, a complete failure.\" → Negative\n",
       "> \"I deeply regret this purchase.\" → Negative\n",
-      "> \"This is for testing purposes.\" → Neutral\n",
+      "> \"This is for testing purposes.\" → Negative\n",
       "> \"This is not good at all.\" → Positive\n",
-      "> \"I'm not dissatisfied with the result.\" → Positive\n",
+      "> \"I'm not dissatisfied with the result.\" → Negative\n",
       "> \"I wouldn't call it the worst thing ever.\" → Negative\n",
       "> \"It's not the best, but it's not the worst either.\" → Positive\n",
       "> \"The product could have been better.\" → Positive\n",
       "> \"Unless the quality improves, I won't buy again.\" → Positive\n",
       "> \"Oh great, it arrived broken. Perfect.\" → Negative\n",
-      "> \"The phone's camera is amazing, but the battery life is terrible.\" → Negative\n",
+      "> \"The phone's camera is amazing, but the battery life is terrible.\" → Positive\n",
       "> \"Este serviço não é bom.\" → Positive\n",
-      "> \"A qualidade poderia ser muito melhor.\" → Positive\n",
-      "> \"Funciona exatamente como esperado.\" → Positive\n",
-      "> \"Estou nem um pouco impressionado.\" → Negative\n",
-      "> \"Je ne le recommande pas du tout.\" → Positive\n",
+      "> \"A qualidade poderia ser muito melhor.\" → Negative\n",
+      "> \"Funciona exatamente como esperado.\" → Negative\n",
+      "> \"Estou nem um pouco impressionado.\" → Positive\n",
+      "> \"Je ne le recommande pas du tout.\" → Negative\n",
       "> \"Ce n'est pas mal, en fait.\" → Negative\n",
       "> \"यह उत्पाद मुझे पसंद आया।\" → Negative\n",
-      "> \"सेवा अच्छी नहीं थी।\" → Positive\n",
-      "> \"यह ठीक-ठाक है, कुछ खास नहीं।\" → Positive\n",
+      "> \"सेवा अच्छी नहीं थी।\" → Negative\n",
+      "> \"यह ठीक-ठाक है, कुछ खास नहीं।\" → Negative\n",
       "> \"¡Esto es maravilloso!\" → Positive\n",
       "> \"No me gusta para nada.\" → Negative\n",
       "> \"I am so sad :(\" → Negative\n",
       "> \"This makes me very happy :D\" → Positive\n",
       "> \"meh.\" → Negative\n",
-      "> \"The service was just awful 👎\" → Positive\n",
+      "> \"The service was just awful 👎\" → Negative\n",
       "> \"Love it ❤️❤️❤️\" → Positive\n",
       "> \"I am so angry right now 😠\" → Negative\n",
       "> \"hmmm 🤔 not sure what to think\" → Negative\n",
-      "> \"this prodict is amzang\" → Positive\n"
+      "> \"this prodict is amzang\" → Negative\n"
      ]
     }
    ],
