--- a/final-project.ipynb
+++ b/final-project.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
-      "metadata": {
-        "id": "AivrZUP5bpsH"
-      },
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/TheOctoMizer/AAI-510-Project/blob/main/final-project.ipynb)"
+        "<a href=\"https://colab.research.google.com/github/TheOctoMizer/AAI-510-Project/blob/main/final-project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -26,17 +27,8 @@
         "- Analyzing feedback across diverse markets"
       ],
       "metadata": {
-        "id": "90iv8dJhby4t"
+        "id": "_NQQ1fxScibq"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "BQ4H4lCHbpsX"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
