--- a/FinalProjectSentimentAnalysis.ipynb
+++ b/FinalProjectSentimentAnalysis.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMkXJPvFT963gC2mzaNPg/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +36,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## 1. Business Understanding\n",
+        "\n",
+        "Twitter sentiment analysis helps brands, governments, and researchers understand public opinion in real time.\n",
+        "\n",
+        "**Business Need:** Build a multilingual sentiment classifier (English, French, Portuguese) that classifies tweets as:\n",
+        "- Positive\n",
+        "- Negative\n",
+        "\n",
+        "This will enable:\n",
+        "- Monitoring brand perception\n",
+        "- Tracking political sentiment\n",
+        "- Analyzing feedback across diverse markets"
+      ],
       "metadata": {
         "id": "RoBGEePUcyUY"
       },
