--- a/FinalProjectSentimentAnalysis.ipynb
+++ b/FinalProjectSentimentAnalysis.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyMeCUAcT8EzGCpv2p8OSjHz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Sentimenet Analysis using multilingual texts:\n"
-      ],
-      "metadata": {
-        "id": "6vZHEnGDczoe"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "## Sentimenet Analysis using multilingual texts:\n",
+        "\n",
+        "\n",
         "## 1. Business Understanding\n",
         "\n",
         "Twitter sentiment analysis helps brands, governments, and researchers understand public opinion in real time.\n",
@@ -50,6 +45,13 @@
         "- Tracking political sentiment\n",
         "- Analyzing feedback across diverse markets"
       ],
+      "metadata": {
+        "id": "6vZHEnGDczoe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "RoBGEePUcyUY"
       },
