--- a/FinalProjectSentimentAnalysis.ipynb
+++ b/FinalProjectSentimentAnalysis.ipynb
@@ -28,21 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Sentimenet Analysis using multilingual texts:\n",
-        "\n",
-        "\n",
-        "## 1. Business Understanding\n",
-        "\n",
-        "Twitter sentiment analysis helps brands, governments, and researchers understand public opinion in real time.\n",
-        "\n",
-        "**Business Need:** Build a multilingual sentiment classifier (English, French, Portuguese) that classifies tweets as:\n",
-        "- Positive\n",
-        "- Negative\n",
-        "\n",
-        "This will enable:\n",
-        "- Monitoring brand perception\n",
-        "- Tracking political sentiment\n",
-        "- Analyzing feedback across diverse markets"
+        "## Sentimenet Analysis using multilingual texts:\n"
       ],
       "metadata": {
         "id": "6vZHEnGDczoe"
@@ -51,7 +37,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# test"
+        "xx"
       ],
       "metadata": {
         "id": "RoBGEePUcyUY"
