--- a/FinalProjectSentimentAnalysis.ipynb
+++ b/FinalProjectSentimentAnalysis.ipynb
@@ -35,10 +35,28 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "ffdffg"
+        "## 1. Business Understanding\n",
+        "\n",
+        "Twitter sentiment analysis helps brands, governments, and researchers understand public opinion in real time.\n",
+        "\n",
+        "**Business Need:** Build a multilingual sentiment classifier (English, French, Portuguese) that classifies tweets as:\n",
+        "- Positive\n",
+        "- Negative\n",
+        "\n",
+        "This will enable:\n",
+        "- Monitoring brand perception\n",
+        "- Tracking political sentiment\n",
+        "- Analyzing feedback across diverse markets"
       ],
+      "metadata": {
+        "id": "wV21yqfyev9e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "RoBGEePUcyUY"
       },
