--- a/FinalProjectSentimentAnalysis.ipynb
+++ b/FinalProjectSentimentAnalysis.ipynb
@@ -37,7 +37,18 @@
     {
       "cell_type": "code",
       "source": [
-        "xx"
+        "## 1. Business Understanding\n",
+        "\n",
+        "Twitter sentiment analysis helps brands, governments, and researchers understand public opinion in real time.\n",
+        "\n",
+        "**Business Need:** Build a multilingual sentiment classifier (English, French, Portuguese) that classifies tweets as:\n",
+        "- Positive\n",
+        "- Negative\n",
+        "\n",
+        "This will enable:\n",
+        "- Monitoring brand perception\n",
+        "- Tracking political sentiment\n",
+        "- Analyzing feedback across diverse markets"
       ],
       "metadata": {
         "id": "RoBGEePUcyUY"
