--- a/FinalProjectSentimentAnalysis.ipynb
+++ b/FinalProjectSentimentAnalysis.ipynb
@@ -35,7 +35,7 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "## 1. Business Understanding\n",
         "\n",
@@ -49,6 +49,15 @@
         "- Monitoring brand perception\n",
         "- Tracking political sentiment\n",
         "- Analyzing feedback across diverse markets"
+      ],
+      "metadata": {
+        "id": "wV21yqfyev9e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test"
       ],
       "metadata": {
         "id": "RoBGEePUcyUY"
