--- a/final-project.ipynb
+++ b/final-project.ipynb
@@ -29,6 +29,25 @@
       "metadata": {
         "id": "_NQQ1fxScibq"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Data Understanding\n",
+        "\n",
+        "You have 3 datasets:\n",
+        "- 🇬🇧 English: 100k+ samples with text and sentiment\n",
+        "- 🇫🇷 French: ~9 lakh samples, but lacks \"neutral\"\n",
+        "- 🇵🇹 Portuguese: ~6 lakh samples\n",
+        "\n",
+        "Challenges:\n",
+        "- Label format inconsistencies (e.g., 0/1/2, strings)\n",
+        "- Extra columns\n",
+        "- Missing/imbalanced classes"
+      ],
+      "metadata": {
+        "id": "pwW12qRKrBql"
+      }
     }
   ],
   "metadata": {
