--- a/final-project.ipynb
+++ b/final-project.ipynb
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "YwYhjkrLsNLO"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "fDYQvvFMsqxY"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "8WMDdlbwssqc"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "ITHE_ZL9susJ"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,7 +216,7 @@
       "metadata": {
         "id": "OQp_ECsjswRb"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +233,7 @@
         },
         "outputId": "8a857853-0525-46fc-c438-392d251f1699"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
         },
         "outputId": "d47bb240-70da-4fbb-94df-70a293ef655f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +296,7 @@
       "metadata": {
         "id": "Dkwyr8Hfs1uZ"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "-gVbK_ejxgGv"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
         },
         "outputId": "b37d1139-0c93-4177-f8b5-96505cd9bc7e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -413,7 +413,7 @@
         },
         "outputId": "88581ad2-5729-41de-af31-41123a99119c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -451,23 +451,23 @@
       "metadata": {
         "id": "kkOjLOI5wsaZ"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_df['label_enc'].value_counts()"
+        "train_df['label_enc'].value_counts()\n"
       ],
       "metadata": {
-        "id": "3e4xNbI-w-oj",
-        "outputId": "af747e76-4cb6-47f4-d971-128cc9e6012e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 176
-        }
+        },
+        "id": "3e4xNbI-w-oj",
+        "outputId": "af747e76-4cb6-47f4-d971-128cc9e6012e"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,127 +531,6 @@
       "metadata": {
         "id": "zMu6YdBCwWg1"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from keras.callbacks import EarlyStopping\n",
-        "\n",
-        "early_stop = EarlyStopping(\n",
-        "    monitor='val_loss',\n",
-        "    patience=2,\n",
-        "    restore_best_weights=True\n",
-        ")\n",
-        "\n",
-        "max_len = 100\n",
-        "tokenizer = Tokenizer(num_words=20000)\n",
-        "tokenizer.fit_on_texts(train_df['text'])\n",
-        "\n",
-        "X_train = pad_sequences(tokenizer.texts_to_sequences(train_df['text']), maxlen=max_len)\n",
-        "X_test = pad_sequences(tokenizer.texts_to_sequences(test_df['text']), maxlen=max_len)\n",
-        "y_train = to_categorical(train_df['label_enc'])\n",
-        "y_test = to_categorical(test_df['label_enc'])\n",
-        "\n",
-        "model = Sequential()\n",
-        "model.add(Embedding(20000, 128))\n",
-        "model.add(LSTM(64, dropout=0.2))\n",
-        "model.add(Dense(2, activation='softmax'))\n",
-        "\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "model.fit(X_train, y_train, epochs=10, batch_size=64,callbacks=[early_stop], validation_split=0.1)\n",
-        "\n",
-        "y_pred = np.argmax(model.predict(X_test), axis=1)\n",
-        "y_true = np.argmax(y_test, axis=1)\n",
-        "results = {}\n",
-        "results[\"LSTM\"] = {\n",
-        "    \"report\": classification_report(y_true, y_pred, target_names=[\"negative\", \"positive\"], output_dict=True)\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "qLhdHQvLwYwm",
-        "outputId": "7189b193-9265-49e4-e223-5832273e1b74",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/10\n",
-            "\u001b[1m2194/2194\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 10ms/step - accuracy: 0.7807 - loss: 0.4295 - val_accuracy: 0.8388 - val_loss: 0.3385\n",
-            "Epoch 2/10\n",
-            "\u001b[1m2194/2194\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 9ms/step - accuracy: 0.8720 - loss: 0.2791 - val_accuracy: 0.8437 - val_loss: 0.3344\n",
-            "Epoch 3/10\n",
-            "\u001b[1m2194/2194\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 10ms/step - accuracy: 0.8913 - loss: 0.2382 - val_accuracy: 0.8376 - val_loss: 0.3618\n",
-            "Epoch 4/10\n",
-            "\u001b[1m2194/2194\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 10ms/step - accuracy: 0.9117 - loss: 0.1979 - val_accuracy: 0.8319 - val_loss: 0.3926\n",
-            "\u001b[1m1219/1219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 4ms/step\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "from sklearn.metrics import classification_report, accuracy_score, f1_score\n",
-        "\n",
-        "# 1. Predict probabilities\n",
-        "y_pred_probs = model.predict(X_test)\n",
-        "\n",
-        "# 2. Convert probabilities to predicted class labels\n",
-        "y_pred = np.argmax(y_pred_probs, axis=1)\n",
-        "\n",
-        "# 3. Convert one-hot true labels to class indices\n",
-        "y_true = np.argmax(y_test, axis=1)\n",
-        "\n",
-        "# 4. Print classification report\n",
-        "print(\"📊 Classification Report:\")\n",
-        "print(classification_report(y_true, y_pred, target_names=[\"negative\", \"positive\"]))\n",
-        "\n",
-        "# 5. Optionally compute and print accuracy or F1\n",
-        "acc = accuracy_score(y_true, y_pred)\n",
-        "f1 = f1_score(y_true, y_pred)\n",
-        "print(f\"✅ Accuracy: {acc:.4f}\")\n",
-        "print(f\"✅ F1 Score: {f1:.4f}\")"
-      ],
-      "metadata": {
-        "id": "APsaD0Hg1AV_",
-        "outputId": "6eb376b7-ce48-499b-a2d6-0e2bd41fae1b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m1219/1219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step\n",
-            "📊 Classification Report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "    negative       0.85      0.84      0.84     19516\n",
-            "    positive       0.84      0.85      0.84     19484\n",
-            "\n",
-            "    accuracy                           0.84     39000\n",
-            "   macro avg       0.84      0.84      0.84     39000\n",
-            "weighted avg       0.84      0.84      0.84     39000\n",
-            "\n",
-            "✅ Accuracy: 0.8441\n",
-            "✅ F1 Score: 0.8444\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
